@startuml
'https://plantuml.com/class-diagram

package "IDMP Datamodel restricted to the MAL" as idmpDatamodel <<frame>> {
    entity Strength {
        * id: Integer <<generated>>
        --
        concentrationNumeratorValue: Float
        concentrationNumeratorUnit: UcumUnit
        concentrationDenominatorValue: Float
        concentrationDenominatorUnit: UcumUnit
        presentationNumeratorValue: Float
        presentationNumeratorUnit: UcumUnit
        presentationDenominatorValue: Float
        presentationDenominatorUnit: UcumUnit
    }

    together {
        entity Substance {
            * id: Integer <<generated>>
            --
            code: EmaSporSms <<unique>>
            name: String
            moiety: String
        }

        entity Ingredient {
            * id: Integer <<generated>>
            --
            role: SporRms
        }

        Substance ||-r-o{ Ingredient : "substance"
    }

    together {
        entity RouteOfAdministration {
            * id: Integer <<generated>>
            --
            routeOfAdministration: EdqmRouteOfAdministration
        }

        entity PharmaceuticalProduct {
            * id: Integer <<generated>>
            --
            phpId: IdmpPhpId <<unique>>
            administrableDoseForm: EdqmDoseForm
            unitOfPresentation: EdqmUnitOfPresentation
        }
    }

    entity MedicinalProduct {
        * id: Integer <<generated>>
        --
        mpId: IdmpMpId <<unique>>
        country: IsoCountryCode
        fullName: String
        authorizedPharmaceuticalDoseForm: EdqmDoseForm
        marketingAuthorizationHolder: SporOms
    }

    entity AtcCode {
        * id: Integer <<generated>>
        --
        atcCode: String
    }

    entity PackagedMedicinalProduct {
        * id: Integer <<generated>>
        --
        pcId: IdmpPcId <<unique>>
        packSize: Integer
    }

    entity PackageItem {
        * id: Integer <<generated>>
        --
        type: EdqmPackageItemType
        packageItemQuantity: Integer
    }

    entity ManufacturedItem {
        * id: Integer <<generated>>
        --
        manufacturedDoseForm: EdqmDoseForm
        unitOfPresentation: EdqmUnitOfPresentation
        manufacturedItemQuantity: Float
        manufacturedItemQuantityVolumeUnit: UcumUnit
    }

    MedicinalProduct ||--|{ AtcCode : "atcCodes"

    Strength ||--o| Ingredient : "referenceStrength"
    Strength |o--o| Ingredient : "strength"

    ' Ingredient }|---|| PharmaceuticalProduct : "ingredients <<redundant>>"
    Ingredient }|---|| ManufacturedItem : "ingredients"

    RouteOfAdministration }|-r-|| PharmaceuticalProduct : "routesOfAdministration"
    PharmaceuticalProduct ||--o{ MedicinalProduct : "pharmaceuticalProduct"
    MedicinalProduct ||-o{ PackagedMedicinalProduct : "medicinalProduct"
    PackagedMedicinalProduct |o-|{ PackageItem : "packagedMedicinalProduct"
    PackageItem |o-o{ PackageItem : "packageItem"
    ManufacturedItem }o--|| PackageItem : "packageItem"
}

@enduml